# sqlite-amalgamation

./: CMakeLists.txt  README.md
